# auto-dubbing

./: .gitignore  README.md  audio.rttm  autodubbing.ipynb  config.yaml  pyproject.toml  re_run.py  requirements.txt  requirements_dev.txt  run.py  run_evaluation.py  whisper.json  whisper17.json  whisper19.json  whisper2.json  whisper22.json
ground_truth/: ground_truth_video_16.json  ground_truth_video_17.json  ground_truth_video_18.json  ground_truth_video_19.json  ground_truth_video_20.json
pipelines/: pipeline.py  test_pipeline.py
src/auto_dubbing/: alignment.py  audio_extraction.py  audio_slicing.py  combine.py  evaluation.py  fix_transcripts.py  mix_audio_video.py  mixing.py  speaker_diarization.py  time_stretch.py  transcribe.py  transcription.py  translation.py  tts.py  vocal_processing.py  vocal_separation.py  vocal_slicing.py  voice_conversion.py
