[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-dubbing"
version = "0.0.1"
description = "A pipeline for automatic dubbing and remixing of video input."
authors = [
  { name = "Tobias Rodrigues Bjerre" },
  { name = "William Kock Andersen" },
  { name = "Laura Munch Bjerg" }
]

keywords = ["dubbing", "auto dubbing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
